...
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/neighbour_detail"
    tools:context=".ui.neighbour_list.NeighbourDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
...

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_neighbour_detail" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/appBar"
        android:layout_margin="16dp"
        android:src="@drawable/ic_star_border_24dp"
        app:layout_anchorGravity="bottom|right|end"
...
